# lunchbox

./: .dockerignore  .gitlab-ci.yml  Cargo.toml  Dockerfile
db/: schema.sql
lunchbox-macros/: Cargo.toml
lunchbox-macros/src/: lib.rs
src/: common.rs  env.rs  main.rs  meal.rs  order.rs  paymethod.rs  provider.rs  user.rs
src/common/: error.rs
static/: index.html
test/: __init__.py  provider.py
ui/src/: App.svelte
