[package]
name = "lunchbox"
version = "0.1.0"
authors = ["Mike Cronce <mike@quadra-tec.net>"]
edition = "2018"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
debug = false

[dependencies]
actix-files = "~0.2"
actix-rt = "~1"
actix-session = "~0.3"
actix-web = "~2"
bcrypt = "~0.6"
env_logger = "~0.7"
mysql = "~17"
num_cpus = "~1"
serde = {version = "~1", features = ["derive"]}

lunchbox-macros = { path = "lunchbox-macros" }

