[package]
name = "lunchbox"
version = "0.1.0"
authors = ["Mike Cronce <mike@quadra-tec.net>"]
edition = "2018"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
debug = false

[dependencies]
actix-files = "0.4"
actix-rt = "1"
actix-session = "0.4"
actix-web = "3"
bcrypt = "~0.6"
chrono = {version = "~0.4", features = ["serde"]}
env_logger = "~0.7"
futures = "0.3"
sqlx = {version = "0.4", features = ["chrono", "mysql", "runtime-actix-rustls"]}
num_cpus = "~1"
serde = {version = "~1", features = ["derive"]}

actix-helper-macros = "0.4"

